--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
 
 
-
+    
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
